 - Qt: Fix drawing on macOS break when using OpenGL (fixes mgba.io/i/1899)
 - Qt: Load/save bytes from memory viewer in the order visible (fixes mgba.io/i/1900)
 - Qt: Fix stride changing when toggling SGB borders (fixes mgba.io/i/1898)
 - Qt: Fix aliasing on background logo (fixes mgba.io/i/1886)
 - mGUI: Fix closing down a game if an exit is signalled
 - mVL: Fix injecting accidentally draining non-injection buffer
 - SM83: Simplify register pair access on big endian
 - SM83: Disassemble STOP as one byte
 - VFS: Fix directory node listing on some filesystems
Misc:
 - 3DS: Use "wide mode" where applicable for slightly better filtering
 - Core: Add savedataUpdated callback
 - Core: Add shutdown callback
 - GB: Allow pausing event loop while CPU is blocked
 - GB: Add support for sleep and shutdown callbacks
 - GBA: Allow pausing event loop while CPU is blocked
 - GBA BIOS: Division by zero should emit a FATAL error
 - GBA Video: Convert OpenGL VRAM texture to integer
 - GBA Video: Improve speed of window texture generation on AMD
 - Debugger: Keep track of global cycle count
 - FFmpeg: Add looping option for GIF/APNG
 - mGUI: Show battery percentage
 - Qt: Renderer can be changed while a game is running
 - Qt: Add hex index to palette view
 - Qt: Add transformation matrix info to sprite view
 - Qt: Memory viewer now supports editing decimal values directly (closes mgba.io/i/1705)
 - Qt: Add copy button to GB printer dialog
 - Util: Reset vector size on deinit
 - VFS: Change semantics of VFile.sync on mapped files (fixes mgba.io/i/1730)

0.8.3: (2020-08-03)
Emulation fixes:
 - ARM: Fix LDM^ writeback to user-mode register
 - ARM: Fix LDM^ {pc} differences (fixes mgba.io/i/1698)
 - ARM: Fix edge case with Thumb SBC flags (fixes mgba.io/i/1818)
 - GB MBC: Fix MBC1 RAM enable bit selection
 - GB MBC: Fix MBC2 bit selection
 - GB Memory: Fix OAM DMA from top 8 kB
 - GB Video: Always initialize palette